# openhealth

./: .gitignore  Cargo.toml  README.md
src/: display.rs  main.rs
src/commands/: age_risk.rs  alert.rs  almanac.rs  bmi.rs  body_system.rs  check.rs  comorbidity.rs  compare.rs  complication.rs  contagion.rs  danger_signs.rs  diff.rs  disease.rs  dose_calc.rs  drug_info.rs  emergency.rs  export.rs  family_history.rs  first_aid.rs  glossary.rs  history.rs  hydration.rs  incubation.rs  interact.rs  lifestyle.rs  list.rs  medication.rs  mod.rs  nutrition.rs  onset.rs  polypharm.rs  predict.rs  prevalence.rs  profile.rs  quiz.rs  region.rs  risk.rs  screen.rs  search.rs  severity_guide.rs  (+14 more)
src/db/: mod.rs  schema.rs  seed.rs
src/engine/: mod.rs  scorer.rs  severity.rs
tests/: integration_tests.rs
